Fixed mobile scrollbar bug

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -245,7 +245,7 @@ nav li {
 
 .gridContainer {
   box-sizing: border-box;
-  height: 100%;
+  height: 93vh;
 
   display: grid;
   grid-template-columns: repeat(5, auto);
@@ -770,6 +770,19 @@ nav li {
     height: 100%;
     position: sticky;
   }
+
+  .chatboxInput{
+    width: 75%;
+  }
+
+
+
+
+  .chatboxBtn{
+    width: 25%;
+  }
+
+
 
   .landingWrapper {
     text-align: left;
